--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -69,6 +69,28 @@
       {% endif %}
 
 
+
+      {% if site.resume_section_teaching %}
+      <!-- begin Teaching -->
+      <section class="content-section">
+
+        <header class="section-header">
+          <h2>Teaching</h2>
+        </header>
+
+        {% for job in site.data.teaching %}
+        <div class="resume-item" itemscope itemprop="worksFor" itemtype="http://schema.org/Organization">
+          <h3 class="resume-item-title" itemprop="name">{{ job.company }}</h3>
+          <h4 class="resume-item-details" itemprop="description">{{ job.position }} &bull; {{ job.duration }}</h4>
+          <p class="resume-item-copy">{{ job.summary }}</p>
+        </div><!-- end of resume-item -->
+        {% endfor %}
+
+      </section>
+      <!-- end Teaching -->
+      {% endif %}
+
+
       {% if site.resume_section_education %}
       <!-- begin Education -->
       <section class="content-section">
