--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -162,7 +162,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Recognition</h2>
+          <h2>FELLOWSHIPS & AWARDS </h2>
         </header>
 
         {% for recognition in site.data.recognitions %}
@@ -182,7 +182,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>Associations</h2>
+          <h2>Leadership</h2>
         </header>
 
         {% for association in site.data.associations %}
