--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -123,7 +123,7 @@
       <!-- begin Projects -->
       <section class="content-section">
         <header class="section-header">
-          <h2>Projects</h2>
+          <h2>Research Projects</h2>
         </header>
 
         {% for project in site.data.projects %}
