--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -268,6 +268,33 @@
       {% endif %}
 
 
+      {% if site.resume_section_references %}
+      <!-- begin References -->
+      <section class="content-section">
+      
+        <header class="section-header">
+          <h2>References</h2>
+        </header>
+      
+        <div class="resume-item">
+          <ul class="resume-item-list">
+            {% for reference in site.data.references %}
+            <li>
+              <p>{{ reference.title }} {{ reference.name }}, {{ reference.position }}</p>
+              <p>{{ reference.organization }}</p>
+              <p>{{ reference.phone }} | <a href="mailto:{{ reference.email }}">{{ reference.email }}</a></p>
+            </li>
+            {% endfor %}
+          </ul>
+        </div>
+      
+      </section>
+      <!-- end References -->
+      {% endif %}
+      
+
+    
+
       {% if site.resume_print_social_links %}
       <!-- begin Print Social Links -->
       <section class="content-section print-only">
