--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -280,7 +280,7 @@
           <ul class="resume-item-list">
             {% for reference in site.data.references %}
             <li>
-              <p>{{ reference.title }} {{ reference.name }}, {{ reference.position }}</p>
+              <p></strong> {{ reference.title }} {{ reference.name }} </strong>, {{ reference.position }}</p>
               <p>{{ reference.organization }}</p>
               <p>{{ reference.phone }} | <a href="mailto:{{ reference.email }}">{{ reference.email }}</a></p>
             </li>
