--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -127,7 +127,7 @@
       <section class="content-section">
 
         <header class="section-header">
-          <h2>FELLOWSHIPS & AWARDS </h2>
+          <h2>Fellowships & Awards </h2>
         </header>
 
         {% for recognition in site.data.recognitions %}
