--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -101,7 +101,7 @@
       <section class="content-section">
       
         <header class="section-header">
-          <h2>Conferences</h2>
+          <h2>Publications</h2>
         </header>
       
         <div class="resume-item">
@@ -122,20 +122,20 @@
       {% endif %}
 
 
-      {% if site.resume_section_publications %}
+      {% if site.resume_section_conferences %}
       <!-- begin Conferences -->
       <section class="content-section">
       
         <header class="section-header">
-          <h2>Publications</h2>
+          <h2>Conferences</h2>
         </header>
       
         <div class="resume-item">
           <ol class="resume-item-list">
             {% for conference in site.data.conferences %}
             <li>
-              {{ conference.authors }}, {{ conference.title }}, <em>{{ conference.name }}</em>, ({{ conference.date }}), {{ conference.City }}.
-              {% if publication.doi %}
+              {{ conference.authors }}, {{ conference.title }}, <em>{{ conference.name }}</em>, ({{ conference.date }}), {{ conference.city }}.
+              {% if conference.doi %}
               <a href="https://doi.org/{{ conference.doi }}" target="_blank">{{ conference.doi }}</a>
               {% endif %}
             </li>
