--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -277,7 +277,7 @@
       {% endif %}
 
 
-      {% if site.resume_section_links %}
+      {% if site.resume_section_presentations %}
       <!-- begin Presentations -->
       <section class="content-section">
 
