--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -285,7 +285,7 @@
         <div class="resume-item">
           <ul class="resume-item-list">
             {% for presentation in site.data.presentations %}
-            <li><a href={{ link.url }} itemprop="url">{{ link.description }}</a></li>
+            <li><a href={{ presentation.url }} itemprop="url">{{ presentation.description }}</a></li>
             {% endfor %}
           </ul>
         </div>
