--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -275,7 +275,7 @@
 
 
       {% if site.resume_section_presentations %}
-      <!-- begin Invited Presentations -->
+      <!-- begin Presentations -->
       <section class="content-section">
       
         <header class="section-header">
@@ -296,7 +296,7 @@
         </div>
       
       </section>
-      <!-- end Invited Presentations -->
+      <!-- end Presentations -->
       {% endif %}
       
 
@@ -344,7 +344,6 @@
       <!-- end References -->
       {% endif %}
       
-
     
 
       {% if site.resume_print_social_links %}
