--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -363,7 +363,7 @@
       {% endif %}
 
       <footer class="page-footer">
-        <p class="footer-line">Made by <a href="http://twitter.com/yohannes_ws">@yohannes_ws</a>. <!--Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>-->
+        <p class="footer-line">Made by <a href="http://twitter.com/yohannes_ws">@Yohannes</a>. <!--Fork me on <a href="https://github.com/jglovier/resume-template">GitHub</a>.</p>-->
         <!--<p class="footer-line">If this is your live resume, you can modify or remove this part. ;-)</p>-->
       </footer>
 
